Bug 370286 - Account order in exported template does not match the initial used template file
Summary: Account order in exported template does not match the initial used template file
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-08 09:04 UTC by Ralf Habacker
Modified: 2019-08-29 00:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-10-08 09:04:28 UTC
The files generated by the template export shows a different order of accounts as the imported account template
1. start KMymoney
2. create new file based on german skr03 template
3. export account template through menu entry file>export->account template
4. Compare exported file with the original template file


Reproducible: Always

Steps to Reproduce:
1. start KMymoney
2. create new file based on german skr03 template
3. export account template through menu entry file>export->account template
4. Compare exported file with the original template file

Actual Results:  
The order of the accounts does not match the initial used template file

Expected Results:  
The order of the accounts should match the initial used template file

Having the same order makes finding bugs in template export/import easier because one can see differences immediately.
Comment 1 Ralf Habacker 2016-10-08 09:07:06 UTC
Git commit cc1bc47617a94a85fe567a290c9b34e1e3ca9722 by Ralf Habacker.
Committed on 08/10/2016 at 09:05.
Pushed by habacker into branch '4.8'.

Fix 'Account order in exported template does not match the initial used template file'.
FIXED-IN:4.8.1

M  +6    -0    kmymoney/converter/mymoneytemplate.cpp

http://commits.kde.org/kmymoney/cc1bc47617a94a85fe567a290c9b34e1e3ca9722