Fix 'Account order in exported template does not match the initial used template file'.

BUG:370286
FIXED-IN:4.8.1